egonlang-core/res/examples/valid/list.eg
[1, 2, 3];
[[1, 2], [3, 4]];
[true, false];
["foo", "bar"];